--- a/Black80211_Sierra copy-Info.plist
+++ b/Black80211_Sierra copy-Info.plist
@@ -30,10 +30,10 @@
 			<string>net.rpeshkov.${PRODUCT_NAME:rfc1034identifier}</string>
 			<key>IOClass</key>
 			<string>Black80211Control</string>
+			<key>IOPCIPrimaryMatch</key>
+			<string>0x00008086&amp;0x0000ffff</string>
 			<key>IOProviderClass</key>
 			<string>IOPCIDevice</string>
-			<key>IOPCIPrimaryMatch</key>
-			<string>0x00008086&amp;0x00009d1a</string>
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
